tal has deprtments_times in db

--- a/apps/templates/patients/patients_list.html
+++ b/apps/templates/patients/patients_list.html
@@ -14,7 +14,7 @@
     <main class="main-content position-relative border-radius-lg ">
 
         {% include "includes/navigation-rtl.html" %}
-
+        {{% for message in messages %}}
         <div class="container-fluid py-4  align-center" dir="rtl">
             <div class="row">
                 <div class="col-12">
