--- a/apps/templates/patients/patients_list.html
+++ b/apps/templates/patients/patients_list.html
@@ -14,7 +14,7 @@
     <main class="main-content position-relative border-radius-lg ">
 
         {% include "includes/navigation-rtl.html" %}
-        {{% for message in messages %}}
+
         <div class="container-fluid py-4  align-center" dir="rtl">
             <div class="row">
                 <div class="col-12">
@@ -101,8 +101,7 @@
 
                                                     </div>
                                                     <div class="modal-body">
-                                                        <form action="{{ url_for('patients_blueprint.update_patient',patient_id=patient.patient_id,form=form) }}"
-                                                              method="POST" name="patients_list">
+                                                        <form action="{{ url_for('patients_blueprint.update_patient',patient_id=patient.patient_id,form=form) }}" method="POST" name="patients_list">
                                                             {{ patient_form.hidden_tag() }}
                                                             <div class="form-group">
                                                                 {{ patient_form.f_name.label(class="form-control-label") }}
@@ -128,10 +127,7 @@
                                                             </div>
 
                                                             <div class="form-group">
-                                                                <button class="btn btn-primary" type="submit"
-                                                                        name="patients_list">
-                                                                    שמור שינויים
-                                                                </button>
+                                                                <button class="btn btn-primary" type="submit" name="patients_list">  שמור שינויים</button>
                                                             </div>
                                                         </form>
 
