--- a/apps/templates/home/new_profile.html
+++ b/apps/templates/home/new_profile.html
@@ -12,7 +12,7 @@
     <span class="mask bg-primary opacity-6"></span>
   </div>
 
-  {% include "includes/sidenav-rtl" %}
+  {% include "includes/sidenav-rtl.html" %}
 
 <!--  <main class="main-content position-relative border-radius-lg ">-->
 
@@ -24,17 +24,15 @@
       <div class="card-body p-3">
         <div class="row gx-4">
           <div class="col-auto">
-            <div class="avatar avatar-xl position-relative">
-              <img src="{{ config.ASSETS_ROOT }}/img/team-1.jpg" alt="profile_image" class="w-100 border-radius-lg shadow-sm">
-            </div>
+
           </div>
           <div class="col-auto my-auto">
             <div class="h-100">
               <h5 class="mb-1">
-                Sayo Kravits
+                מספר מחלקה
               </h5>
               <p class="mb-0 font-weight-bold text-sm">
-                Public Relations
+                [place holder]
               </p>
             </div>
           </div>
@@ -42,21 +40,21 @@
             <div class="nav-wrapper position-relative end-0">
               <ul class="nav nav-pills nav-fill p-1" role="tablist">
                 <li class="nav-item">
-                  <a class="nav-link mb-0 px-0 py-1 active d-flex align-items-center justify-content-center " data-bs-toggle="tab" href="javascript:;" role="tab" aria-selected="true">
+                  <a class="nav-link mb-0 px-0 py-1 active d-flex align-items-center justify-content-center " data-bs-toggle="tab" href="users_times_modal" role="tab" aria-selected="false">
                     <i class="ni ni-app"></i>
-                    <span class="ms-2">App</span>
+                    <span class="ms-2">פרטי מחלקה</span>
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link mb-0 px-0 py-1 d-flex align-items-center justify-content-center " data-bs-toggle="tab" href="javascript:;" role="tab" aria-selected="false">
+                  <a class="nav-link mb-0 px-0 py-1 d-flex align-items-center justify-content-center " data-bs-toggle="tab" href="#profile" role="tab" aria-selected="false">
                     <i class="ni ni-email-83"></i>
-                    <span class="ms-2">Messages</span>
+                    <span class="ms-2">פרטי משתמש</span>
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link mb-0 px-0 py-1 d-flex align-items-center justify-content-center " data-bs-toggle="tab" href="javascript:;" role="tab" aria-selected="false">
+                  <a class="nav-link mb-0 px-0 py-1 d-flex align-items-center justify-content-center " data-bs-toggle="tab" href="#system_prefs" role="tab" aria-selected="false">
                     <i class="ni ni-settings-gear-65"></i>
-                    <span class="ms-2">Settings</span>
+                    <span class="ms-2">הגדרות מערכת</span>
                   </a>
                 </li>
               </ul>
@@ -72,80 +70,137 @@
         <div class="col-md-8">
           <div class="card">
             <div class="card-header pb-0">
-              <div class="d-flex align-items-center">
-                <p class="mb-0">Edit Profile</p>
-                <button class="btn btn-primary btn-sm ms-auto">Settings</button>
+              <div class="d-flex" dir="rtl">
+                <p class="mb-0">שעות פעילות המחלקה</p>
               </div>
+             <button class="btn btn-primary btn-sm ms-auto" >הוספת שעות למחלקה</button>
+
             </div>
             <div class="card-body">
               <p class="text-uppercase text-sm">User Information</p>
               <div class="row">
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="example-text-input" class="form-control-label">Username</label>
-                    <input class="form-control" type="text" value="lucky.jesse">
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="example-text-input" class="form-control-label">Email address</label>
-                    <input class="form-control" type="email" value="jesse@example.com">
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="example-text-input" class="form-control-label">First name</label>
-                    <input class="form-control" type="text" value="Jesse">
-                  </div>
-                </div>
-                <div class="col-md-6">
-                  <div class="form-group">
-                    <label for="example-text-input" class="form-control-label">Last name</label>
-                    <input class="form-control" type="text" value="Lucky">
-                  </div>
-                </div>
+                        <div class="card-body px-0 pt-0 pb-2">
+                            <div class="table-responsive p-0">
+                                <table class="table align-items-center mb-0">
+                                    <thead>
+                                    <tr>
+                                        <th class="text-uppercase text-secondary text-m font-weight-bolder opacity-7">
+                                            יום בשבוע
+                                        </th>
+
+                                        <th class="text-uppercase text-secondary text-m font-weight-bolder opacity-7 ps-2">
+                                            קבלת שיחות החל משעה
+                                        </th>
+
+                                        <th class="text-center text-uppercase text-secondary text-m font-weight-bolder opacity-7">
+                                            עד לשעה
+                                        </th>
+
+                                        <th class="text-secondary opacity-7"></th>
+
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    {% for row in departments_times %}
+                                        <tr>
+
+                                            <td>
+                                                <div class="d-flex px-2 py-1">
+
+                                                    <div class="d-flex flex-column justify-content-center">
+                                                        <h6 class="mb-0 text-sm">{{ row.day }}</h6>
+
+                                                    </div>
+                                                </div>
+                                            </td>
+
+                                            <td>
+                                                <p class="text-m font-weight-bold mb-0">{{ row.from_hour }}</p>
+
+                                            </td>
+
+                                            <td class="align-middle text-center">
+                                                <span class="text-secondary text-m font-weight-bold">{{ row.to_hour }}</span>
+                                            </td>
+
+                                            <td>
+                                                <a href="" class="btn btn-danger btn-s m-0" data-toggle="modal" data-target="#modal_del_time{{row.id}}">מחיקה</a>
+                                            </td>
+                                        </tr>
+
+
+                                        <!-- Edit patient modal!-->
+                                        <div id="modal_edit_patient{{ row.id }}" class="modal fade"
+                                             role="dialog">
+                                            <div class="modal-dialog">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h4 class="modal-title">עריכת מטופל</h4>
+                                                        <button type="button" class="close"
+                                                                data-dismiss="modal"
+                                                                aria-label="Close">
+                                                            <span aria-hidden="true">&times;</span>
+                                                        </button>
+
+                                                    </div>
+                                                    <div class="modal-body">
+
+
+
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-secondary"
+                                                                data-dismiss="modal">Close
+                                                        </button>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <!-- Delete patient modal!-->
+                                        <div id="modal_del_time{{ row.id }}" class="modal fade" role="dialog">
+                                            <div class="modal-dialog" role="document">
+                                                <div class="modal-content">
+                                                    <div class="modal-header">
+                                                        <h4 class="modal-title">מחיקת מטופל</h4>
+                                                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                                            <span aria-hidden="true">&times;</span>
+                                                        </button>
+
+                                                    </div>
+                                                    <div class="modal-body text-center">
+                                                        <p class="text-lg mb-0">האם את\ה בטוח\ה שברצונך למחוק את
+                                                            <span class="font-weight-bolder">{{ row.day }} {{ row.from_hour }}</span>
+                                                            מרשימת המטופלים?
+                                                        </p>
+                                                    </div>
+                                                    <div class="modal-footer">
+                                                        <button type="button" class="btn btn-secondary" data-dismiss="modal">ביטול
+                                                        </button>
+
+                                                        <form method="POST" action=" {{ url_for('home_blueprint.delete_department_time',department_time_id = row.id) }}">
+                                                            <input class="btn btn-danger" type="submit" value="מחיקה">
+                                                        </form>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                        </div>
+
+                                    {% endfor %}
+
+
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+
               </div>
-              <hr class="horizontal dark">
-              <p class="text-uppercase text-sm">Contact Information</p>
-              <div class="row">
-                <div class="col-md-12">
-                  <div class="form-group">
-                    <label for="example-text-input" class="form-control-label">Address</label>
-                    <input class="form-control" type="text" value="Bld Mihail Kogalniceanu, nr. 8 Bl 1, Sc 1, Ap 09">
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="form-group">
-                    <label for="example-text-input" class="form-control-label">City</label>
-                    <input class="form-control" type="text" value="New York">
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="form-group">
-                    <label for="example-text-input" class="form-control-label">Country</label>
-                    <input class="form-control" type="text" value="United States">
-                  </div>
-                </div>
-                <div class="col-md-4">
-                  <div class="form-group">
-                    <label for="example-text-input" class="form-control-label">Postal code</label>
-                    <input class="form-control" type="text" value="437300">
-                  </div>
-                </div>
-              </div>
-              <hr class="horizontal dark">
-              <p class="text-uppercase text-sm">About me</p>
-              <div class="row">
-                <div class="col-md-12">
-                  <div class="form-group">
-                    <label for="example-text-input" class="form-control-label">About me</label>
-                    <input class="form-control" type="text" value="A beautiful Dashboard for Bootstrap 5. It is Free and Open Source.">
-                  </div>
-                </div>
-              </div>
+
+
             </div>
           </div>
         </div>
+
+
         <div class="col-md-4">
           <div class="card card-profile">
             <img src="{{ config.ASSETS_ROOT }}/img/bg-profile.jpg" alt="Image placeholder" class="card-img-top">
@@ -208,9 +263,9 @@
 
     </div>
 
-  </main> 
+  </main>
 
 {% endblock content %}
 
-<!-- Specific JS goes HERE --> 
+<!-- Specific JS goes HERE -->
 {% block javascripts %}{% endblock javascripts %}
