--- a/apps/templates/includes/navigation-rtl.html
+++ b/apps/templates/includes/navigation-rtl.html
@@ -3,10 +3,10 @@
     <div class="container-fluid py-1 px-3">
       <nav aria-label="breadcrumb">
         <ol class="breadcrumb bg-transparent mb-0 pb-0 pt-1 px-0 ">
-          <li class="breadcrumb-item text-sm ps-2"><a class="opacity-5 text-white" href="javascript:;">מסך</a></li>
+{#          <li class="breadcrumb-item text-sm ps-2"><a class="opacity-5 text-white" href="javascript:;">מסך</a></li>#}
           <li class="breadcrumb-item text-sm text-white active" aria-current="page"> עמדת אחיות</li>
         </ol>
-        <h6 class="font-weight-bolder text-white mb-0">ניב ואנדי לנצח</h6>
+        <h6 class="font-weight-bolder text-white mb-0">מוסד רפואי צהלון</h6>
       </nav>
       <div class="collapse navbar-collapse mt-sm-0 mt-2 px-0" id="navbar">
         <div class="ms-md-auto pe-md-3 d-flex align-items-center">
