--- a/apps/templates/includes/sidenav-rtl.html
+++ b/apps/templates/includes/sidenav-rtl.html
@@ -3,55 +3,57 @@
       <i class="fas fa-times p-3 cursor-pointer text-secondary opacity-5 position-absolute start-0 top-0 d-none d-xl-none" aria-hidden="true" id="iconSidenav"></i>
       <a class="navbar-brand m-0" href="/" target="_blank">
         <img src="{{ config.ASSETS_ROOT }}/img/logo-ct-dark.png" class="navbar-brand-img h-100" alt="main_logo">
-        <span class="me-1 font-weight-bold">Temi Robot</span>
+        <span class="me-1 font-weight-bold text-lg">Call me</span>
       </a>
     </div>
     <hr class="horizontal dark mt-0">
     <div class="collapse navbar-collapse px-0 w-auto " id="sidenav-collapse-main">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav" dir="rtl">
         <li class="nav-item">
-          <a class="nav-link " href="/">
+{#          <a class="nav-link " href="/">#}
+              <a class="nav-link " href="{{ url_for('patients_blueprint.patients_list') }}">
             <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
-              <i class="ni ni-tv-2 text-primary text-sm opacity-10"></i>
+              <i class="ni
+ni-world-2 text-primary text-sm opacity-10"></i>
             </div>
-            <span class="nav-link-text me-1">מטופלים</span>
+            <span class="nav-link-text me-1">דף הבית</span>
           </a>
         </li>
         <li class="nav-item">
           <a class="nav-link "href="{{ url_for('patients_blueprint.patients_list') }}">
             <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
-              <i class="ni ni-calendar-grid-58 text-warning text-sm opacity-10"></i>
+              <i class="ni ni-tv-2 text-warning text-sm opacity-10"></i>
             </div>
             <span class="nav-link-text me-1">מטופלים</span>
           </a>
         </li>
+{#        <li class="nav-item">#}
+{#          <a class="nav-link " href="{{ url_for('events_blueprint.calendar') }}">#}
+{#            <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">#}
+{#              <i class="ni ni-credit-card text-success text-sm opacity-10"></i>#}
+{#            </div>#}
+{#            <span class="nav-link-text me-1">לוח שנה ניסיוני</span>#}
+{#          </a>#}
+{#        </li>#}
         <li class="nav-item">
           <a class="nav-link " href="{{ url_for('events_blueprint.calendar') }}">
             <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
-              <i class="ni ni-credit-card text-success text-sm opacity-10"></i>
-            </div>
-            <span class="nav-link-text me-1">לוח שנה ניסיוני</span>
-          </a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link " href="{{ url_for('events_blueprint.calendar') }}">
-            <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
-              <i class="ni ni-app text-info text-sm opacity-10"></i>
+              <i class="ni ni-calendar-grid-58 text-info text-sm opacity-10"></i>
             </div>
             <span class="nav-link-text me-1">לוח שנה</span>
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link active" href="/rtl.html">
-            <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
-              <i class="ni ni-world-2 text-danger text-sm opacity-10"></i>
-            </div>
-            <span class="nav-link-text me-1">RTL</span>
-          </a>
-        </li>
-        <li class="nav-item mt-3">
-          <h6 class="ps-4 me-4 pe-2 text-uppercase text-xs font-weight-bolder opacity-6">הגדרות משתמש</h6>
-        </li>
+{#        <li class="nav-item">#}
+{#          <a class="nav-link active" href="/rtl.html">#}
+{#            <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">#}
+{#              <i class="ni ni-world-2 text-danger text-sm opacity-10"></i>#}
+{#            </div>#}
+{#            <span class="nav-link-text me-1">RTL</span>#}
+{#          </a>#}
+{#        </li>#}
+{#        <li class="nav-item mt-3">#}
+{#          <h6 class="ps-4 me-4 pe-2 text-uppercase text-xs font-weight-bolder opacity-6" dir="rtl">הגדרות משתמש</h6>#}
+{#        </li>#}
         <li class="nav-item">
           <a class="nav-link "  href="{{ url_for('patients_blueprint.patients_list') }}">
             <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
@@ -60,14 +62,14 @@
             <span class="nav-link-text me-1">פרופיל</span>
           </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link " href="/sign-in.html">
-            <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
-              <i class="ni ni-single-copy-04 text-warning text-sm opacity-10"></i>
-            </div>
-            <span class="nav-link-text me-1">התחבר? מה?</span>
-          </a>
-        </li>
+{#        <li class="nav-item">#}
+{#          <a class="nav-link " href="/sign-in.html">#}
+{#            <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">#}
+{#              <i class="ni ni-single-copy-04 text-warning text-sm opacity-10"></i>#}
+{#            </div>#}
+{#            <span class="nav-link-text me-1">התחבר? מה?</span>#}
+{#          </a>#}
+{#        </li>#}
         <li class="nav-item">
           <a class="nav-link " href="/sign-up.html">
             <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
@@ -87,8 +89,8 @@
 <!--            <p class="text-xs font-weight-bold text-center mb-0">يرجى التحقق من مستنداتنا</p>-->
           </div>
         </div>
-      </div>
-      <a href="https://www.creative-tim.com/learning-lab/bootstrap/license/argon-dashboard" target="_blank" class="btn btn-dark btn-sm w-100 mb-3">توثيق</a>
-      <a class="btn btn-primary btn-sm mb-0 w-100" href="https://appseed.us/product/argon-dashboard/flask/" type="button">التطور للاحترافية</a>
-    </div>
+{#      </div>#}
+{#      <a href="https://www.creative-tim.com/learning-lab/bootstrap/license/argon-dashboard" target="_blank" class="btn btn-dark btn-sm w-100 mb-3">توثيق</a>#}
+{#      <a class="btn btn-primary btn-sm mb-0 w-100" href="https://appseed.us/product/argon-dashboard/flask/" type="button">التطور للاحترافية</a>#}
+{#    </div>#}
   </aside>
