--- a/apps/templates/home/tables.html
+++ b/apps/templates/home/tables.html
@@ -62,7 +62,7 @@
                         <span class="text-secondary text-xs font-weight-bold">{{ patient.max_calls }}</span>
                       </td>
                       <td class="align-middle">
-                        <a href="javascript:;" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
+                        <a href="javascript:" class="text-secondary font-weight-bold text-xs" data-toggle="tooltip" data-original-title="Edit user">
                           Edit
                         </a>
                       </td>
