--- a/apps/templates/home/virtual-reality.html
+++ b/apps/templates/home/virtual-reality.html
@@ -51,7 +51,7 @@
         <div class="container">
           <div class="row pt-10">
             <div class="col-lg-1 col-md-1 pt-5 pt-lg-0 ms-lg-5 text-center">
-              <a href="javascript:;" class="avatar avatar-md border-0 d-block mb-2" data-bs-toggle="tooltip" data-bs-placement="left" title="My Profile">
+              <a href="javascript:" class="avatar avatar-md border-0 d-block mb-2" data-bs-toggle="tooltip" data-bs-placement="left" title="My Profile">
                 <img class="border-radius-lg" alt="Image placeholder" src="{{ config.ASSETS_ROOT }}/img/team-1.jpg">
               </a>
               <button class="btn btn-white border-radius-lg p-2 mt-0 mt-md-2 d-block mx-2 mx-md-0" type="button" data-bs-toggle="tooltip" data-bs-placement="left" title="Home">
@@ -99,7 +99,7 @@
                         </h6>
                       </div>
                     </div>
-                    <a href="javascript:;" class="bg-gray-100 w-100 text-center py-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Show More">
+                    <a href="javascript:" class="bg-gray-100 w-100 text-center py-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Show More">
                       <i class="fas fa-chevron-down text-primary"></i>
                     </a>
                   </div>
@@ -117,7 +117,7 @@
                       <p class="text-white mb-0">Shopping</p>
                       <p class="mb-0 text-white">Meeting</p>
                     </div>
-                    <a href="javascript:;" class="w-100 text-center py-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Show More">
+                    <a href="javascript:" class="w-100 text-center py-1" data-bs-toggle="tooltip" data-bs-placement="top" title="Show More">
                       <i class="fas fa-chevron-down text-white"></i>
                     </a>
                   </div>
@@ -125,7 +125,7 @@
                     <div class="card-body">
                       <div class="d-flex">
                         <p class="mb-0">Emails (21)</p>
-                        <a href="javascript:;" class="ms-auto" data-bs-toggle="tooltip" data-bs-placement="top" title="Check your emails">
+                        <a href="javascript:" class="ms-auto" data-bs-toggle="tooltip" data-bs-placement="top" title="Check your emails">
                           Check
                         </a>
                       </div>
@@ -159,16 +159,16 @@
                         <p class="my-auto">Messages</p>
                         <div class="ms-auto">
                           <div class="avatar-group">
-                            <a href="javascript:;" class="avatar avatar-sm border-0 rounded-circle" data-bs-toggle="tooltip" data-bs-placement="top" title="2 New Messages">
+                            <a href="javascript:" class="avatar avatar-sm border-0 rounded-circle" data-bs-toggle="tooltip" data-bs-placement="top" title="2 New Messages">
                               <img alt="Image placeholder" src="{{ config.ASSETS_ROOT }}/img/team-1.jpg">
                             </a>
-                            <a href="javascript:;" class="avatar avatar-sm border-0 rounded-circle" data-bs-toggle="tooltip" data-bs-placement="top" title="1 New Message">
+                            <a href="javascript:" class="avatar avatar-sm border-0 rounded-circle" data-bs-toggle="tooltip" data-bs-placement="top" title="1 New Message">
                               <img alt="Image placeholder" src="{{ config.ASSETS_ROOT }}/img/team-2.jpg">
                             </a>
-                            <a href="javascript:;" class="avatar avatar-sm border-0 rounded-circle" data-bs-toggle="tooltip" data-bs-placement="top" title="13 New Messages">
+                            <a href="javascript:" class="avatar avatar-sm border-0 rounded-circle" data-bs-toggle="tooltip" data-bs-placement="top" title="13 New Messages">
                               <img alt="Image placeholder" src="{{ config.ASSETS_ROOT }}/img/team-3.jpg">
                             </a>
-                            <a href="javascript:;" class="avatar avatar-sm border-0 rounded-circle" data-bs-toggle="tooltip" data-bs-placement="top" title="7 New Messages">
+                            <a href="javascript:" class="avatar avatar-sm border-0 rounded-circle" data-bs-toggle="tooltip" data-bs-placement="top" title="7 New Messages">
                               <img alt="Image placeholder" src="{{ config.ASSETS_ROOT }}/img/team-4.jpg">
                             </a>
                           </div>
