--- a/apps/templates/home/rtl.html
+++ b/apps/templates/home/rtl.html
@@ -108,7 +108,7 @@
                     <p class="mb-1 pt-2 text-bold">بناها المطورون</p>
                     <h5 class="font-weight-bolder">Soft UI Dashboard</h5>
                     <p class="mb-5">من الألوان والبطاقات والطباعة إلى العناصر المعقدة ، ستجد الوثائق الكاملة.</p>
-                    <a class="text-dark font-weight-bold ps-1 mb-0 icon-move-left mt-auto" href="javascript:;">
+                    <a class="text-dark font-weight-bold ps-1 mb-0 icon-move-left mt-auto" href="javascript:">
                       اقرأ المستندات
                       <i class="fas fa-arrow-left text-sm ms-1" aria-hidden="true"></i>
                     </a>
@@ -134,7 +134,7 @@
                 <div class="d-flex flex-column h-100">
                   <h5 class="text-white font-weight-bolder mb-4 pt-2">العمل مع الصواريخ</h5>
                   <p class="text-white mb-5">تكوين الثروة هو لعبة تطوري حديثة ذات حصيلة إيجابية. الأمر كله يتعلق بمن يغتنم الفرصة أولاً هذه بطاقة بسيطة.</p>
-                  <a class="text-white font-weight-bold ps-1 mb-0 icon-move-left mt-auto" href="javascript:;">اقرأ المستندات
+                  <a class="text-white font-weight-bold ps-1 mb-0 icon-move-left mt-auto" href="javascript:">اقرأ المستندات
                     <i class="fas fa-arrow-left text-sm ms-1" aria-hidden="true"></i>
                   </a>
                 </div>
@@ -295,9 +295,9 @@
                       <i class="fa fa-ellipsis-v text-secondary"></i>
                     </a>
                     <ul class="dropdown-menu px-2 py-3 me-n4" aria-labelledby="dropdownTable">
-                      <li><a class="dropdown-item border-radius-md" href="javascript:;">عمل</a></li>
-                      <li><a class="dropdown-item border-radius-md" href="javascript:;">عمل آخر</a></li>
-                      <li><a class="dropdown-item border-radius-md" href="javascript:;">شيء آخر هنا</a></li>
+                      <li><a class="dropdown-item border-radius-md" href="javascript:">عمل</a></li>
+                      <li><a class="dropdown-item border-radius-md" href="javascript:">عمل آخر</a></li>
+                      <li><a class="dropdown-item border-radius-md" href="javascript:">شيء آخر هنا</a></li>
                     </ul>
                   </div>
                 </div>
@@ -328,16 +328,16 @@
                       </td>
                       <td>
                         <div class="avatar-group mt-2">
-                          <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Tompson">
+                          <a href="javascript:" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Tompson">
                             <img alt="Image placeholder" src="{{ config.ASSETS_ROOT }}/img/team-1.jpg">
                           </a>
-                          <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Romina Hadid">
+                          <a href="javascript:" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Romina Hadid">
                             <img alt="Image placeholder" src="{{ config.ASSETS_ROOT }}/img/team-2.jpg">
                           </a>
-                          <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Alexander Smith">
+                          <a href="javascript:" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Alexander Smith">
                             <img alt="Image placeholder" src="{{ config.ASSETS_ROOT }}/img/team-3.jpg">
                           </a>
-                          <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
+                          <a href="javascript:" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
                             <img alt="Image placeholder" src="{{ config.ASSETS_ROOT }}/img/team-4.jpg">
                           </a>
                         </div>
@@ -371,10 +371,10 @@
                       </td>
                       <td>
                         <div class="avatar-group mt-2">
-                          <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Romina Hadid">
+                          <a href="javascript:" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Romina Hadid">
                             <img alt="Image placeholder" src="{{ config.ASSETS_ROOT }}/img/team-2.jpg">
                           </a>
-                          <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
+                          <a href="javascript:" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
                             <img alt="Image placeholder" src="{{ config.ASSETS_ROOT }}/img/team-4.jpg">
                           </a>
                         </div>
@@ -408,10 +408,10 @@
                       </td>
                       <td>
                         <div class="avatar-group mt-2">
-                          <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Romina Hadid">
+                          <a href="javascript:" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Romina Hadid">
                             <img alt="Image placeholder" src="{{ config.ASSETS_ROOT }}/img/team-3.jpg">
                           </a>
-                          <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
+                          <a href="javascript:" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
                             <img alt="Image placeholder" src="{{ config.ASSETS_ROOT }}/img/team-1.jpg">
                           </a>
                         </div>
@@ -445,16 +445,16 @@
                       </td>
                       <td>
                         <div class="avatar-group mt-2">
-                          <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Tompson">
+                          <a href="javascript:" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Tompson">
                             <img alt="Image placeholder" src="{{ config.ASSETS_ROOT }}/img/team-4.jpg">
                           </a>
-                          <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Romina Hadid">
+                          <a href="javascript:" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Romina Hadid">
                             <img alt="Image placeholder" src="{{ config.ASSETS_ROOT }}/img/team-3.jpg">
                           </a>
-                          <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Alexander Smith">
+                          <a href="javascript:" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Alexander Smith">
                             <img alt="Image placeholder" src="{{ config.ASSETS_ROOT }}/img/team-4.jpg">
                           </a>
-                          <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
+                          <a href="javascript:" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
                             <img alt="Image placeholder" src="{{ config.ASSETS_ROOT }}/img/team-1.jpg">
                           </a>
                         </div>
@@ -488,7 +488,7 @@
                       </td>
                       <td>
                         <div class="avatar-group mt-2">
-                          <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Tompson">
+                          <a href="javascript:" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Tompson">
                             <img alt="Image placeholder" src="{{ config.ASSETS_ROOT }}/img/team-4.jpg">
                           </a>
                         </div>
@@ -522,10 +522,10 @@
                       </td>
                       <td>
                         <div class="avatar-group mt-2">
-                          <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Tompson">
+                          <a href="javascript:" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Ryan Tompson">
                             <img alt="Image placeholder" src="{{ config.ASSETS_ROOT }}/img/team-1.jpg">
                           </a>
-                          <a href="javascript:;" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
+                          <a href="javascript:" class="avatar avatar-xs rounded-circle" data-bs-toggle="tooltip" data-bs-placement="bottom" title="Jessica Doe">
                             <img alt="Image placeholder" src="{{ config.ASSETS_ROOT }}/img/team-4.jpg">
                           </a>
                         </div>
