--- a/apps/templates/home/sign-in.html
+++ b/apps/templates/home/sign-in.html
@@ -39,7 +39,7 @@
                 <div class="card-footer text-center pt-0 px-lg-2 px-1">
                   <p class="mb-4 text-sm mx-auto">
                     עדיין לא יצרת מחלקה ?
-                    <a href="javascript:;" class="text-primary text-gradient font-weight-bold">Sign up</a>
+                    <a href="javascript:" class="text-primary text-gradient font-weight-bold">Sign up</a>
                   </p>
                 </div>
               </div>
