--- a/apps/templates/includes/sidenav-rtl.html
+++ b/apps/templates/includes/sidenav-rtl.html
@@ -61,12 +61,12 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link " href="/sign-in.html">
-            <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">
-              <i class="ni ni-single-copy-04 text-warning text-sm opacity-10"></i>
-            </div>
-            <span class="nav-link-text me-1">התחבר? מה?</span>
-          </a>
+<!--          <a class="nav-link " href="/sign-in.html">-->
+<!--            <div class="icon icon-shape icon-sm border-radius-md text-center ms-2 d-flex align-items-center justify-content-center">-->
+<!--              <i class="ni ni-single-copy-04 text-warning text-sm opacity-10"></i>-->
+<!--            </div>-->
+<!--&lt;!&ndash;            <span class="nav-link-text me-1">התחבר? מה?</span>&ndash;&gt;-->
+<!--          </a>-->
         </li>
         <li class="nav-item">
           <a class="nav-link " href="/sign-up.html">
@@ -88,7 +88,7 @@
           </div>
         </div>
       </div>
-      <a href="https://www.creative-tim.com/learning-lab/bootstrap/license/argon-dashboard" target="_blank" class="btn btn-dark btn-sm w-100 mb-3">توثيق</a>
-      <a class="btn btn-primary btn-sm mb-0 w-100" href="https://appseed.us/product/argon-dashboard/flask/" type="button">التطور للاحترافية</a>
+<!--      <a href="https://www.creative-tim.com/learning-lab/bootstrap/license/argon-dashboard" target="_blank" class="btn btn-dark btn-sm w-100 mb-3">توثيق</a>-->
+<!--      <a class="btn btn-primary btn-sm mb-0 w-100" href="https://appseed.us/product/argon-dashboard/flask/" type="button">التطور للاحترافية</a>-->
     </div>
   </aside>
