--- a/apps/templates/accounts/register.html
+++ b/apps/templates/accounts/register.html
@@ -1,4 +1,4 @@
-{% extends 'layouts/base-fullscreen.html' %}
+{% extends 'layouts/base.html' %}
 
 {% block title %} Sign UP {% endblock title %}
 
@@ -7,15 +7,17 @@
 
 {% block content %}
 
+
+
   <main class="main-content  mt-0">
-    <div class="page-header align-items-start min-vh-50 pt-5 pb-11 m-3 border-radius-lg" style="background-image: url('https://raw.githubusercontent.com/creativetimofficial/public-assets/master/argon-dashboard-pro/assets/img/signup-cover.jpg'); background-position: top;">
+    <div class="page-header align-items-start min-vh-70 pt-5 pb-11 m-3 border-radius-lg" style="background-image: url('{{ config.ASSETS_ROOT }}/img/keshet.jpg'); background-position: top;">
       <span class="mask bg-gradient-dark opacity-6"></span>
       <div class="container">
         <div class="row justify-content-center">
           <div class="col-lg-5 text-center mx-auto">
-            <h1 class="text-white mb-2 mt-5">Welcome!</h1>
+<!--            <h1 class="text-white mb-2 mt-5">Welcome!</h1>-->
             <p class="text-lead text-white">
-              Open-Source Seed Project
+<!--              Open-Source Seed Project-->
             </p>
           </div>
         </div>
@@ -44,7 +46,7 @@
               {% if success %}
 
                 <div class="text-center">
-                  <a href="{{ url_for('authentication_blueprint.login') }}" class="btn bg-gradient-dark w-100 my-4 mb-2">Sign IN</a>
+                  <a href="{{ url_for('authentication_blueprint.login') }}" class="btn bg-gradient-dark w-100 my-4 mb-2">התחברות</a>
                 </div>
 
               {% else %}
@@ -64,15 +66,15 @@
                   </div>
                   <div class="form-check form-check-info text-start">
                     <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" checked>
-                    <label class="form-check-label" for="flexCheckDefault">
-                      I agree the <a href="javascript:;" class="text-dark font-weight-bolder">Terms and Conditions</a>
+                    <label  class="form-check-label" for="flexCheckDefault">
+                      אני מסכימ/ה <a href="javascript:;" class="text-dark font-weight-bolder">לתנאי השימוש</a>
                     </label>
                   </div>
                   <div class="text-center">
                     <button type="submit" name="register" class="btn bg-gradient-dark w-100 my-4 mb-2">הרשמה</button>
                   </div>
                   <p class="text-sm mt-3 mb-0 text-center">
-                    המחלקה כבר רשומה? <a href="{{ url_for('authentication_blueprint.login') }}" class="text-dark font-weight-bolder">התחברות</a>
+                    המחלקה כבר רשומה? <a href="{{ url_for('authentication_blueprint.login') }}" class="text-dark font-weight-bolder">לחץ כאן להתחברות</a>
                   </p>
                 </form>
 
