--- a/apps/templates/accounts/login.html
+++ b/apps/templates/accounts/login.html
@@ -29,14 +29,14 @@
                   <form role="form" method="post" action="">
 
                     {{ form.hidden_tag() }}
-                    <div class="mb-3">
-                      {{ form.username(placeholder="Username",class="form-control") }}
+                    <div class="mb-3" dir="rtl">
+                      {{ form.username(placeholder="מספר מחלקה",class="form-control") }}
                     </div>
-                    <div class="mb-3">
-                      {{ form.password(placeholder="Password",class="form-control",type="password") }}
+                    <div class="mb-3" dir="rtl">
+                      {{ form.password(placeholder="סיסמא",class="form-control",type="password") }}
                     </div>
                     <div class="form-check form-switch">
-                      <input class="form-check-input" type="checkbox" id="rememberMe">
+                      <input class="form-check-input" type="checkbox" id="rememberMe" >
                       <label class="form-check-label" for="rememberMe">שמירת מחלקה וסיסמא</label>
                     </div>
                     <div class="text-center">
@@ -57,8 +57,8 @@
               <div class="position-relative bg-gradient-primary h-100 m-3 px-7 border-radius-lg d-flex flex-column justify-content-center overflow-hidden" style="background-image: url('https://raw.githubusercontent.com/creativetimofficial/public-assets/master/argon-dashboard-pro/assets/img/signin-ill.jpg');
           background-size: cover;">
                 <span class="mask bg-gradient-primary opacity-6"></span>
-                <h4 class="mt-5 text-white font-weight-bolder position-relative">"Attention is the new currency"</h4>
-                <p class="text-white position-relative">The more effortless the writing looks, the more effort the writer actually put into the process.</p>
+                <h4 class="mt-5 text-white font-weight-bolder position-relative"></h4>
+                <p class="text-white position-relative"></p>
               </div>
             </div>
           </div>
