--- a/apps/templates/events/calendar.html
+++ b/apps/templates/events/calendar.html
@@ -37,7 +37,7 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1 class="righte">Calendar</h1>
+                        <h1 class="righte">יומן שיחות</h1>
                     </div>
 
                     <div>
