--- a/apps/templates/includes/navigation-auth.html
+++ b/apps/templates/includes/navigation-auth.html
@@ -4,9 +4,7 @@
         <!-- Navbar -->
         <nav class="navbar navbar-expand-lg blur border-radius-lg top-0 z-index-3 shadow position-absolute mt-4 py-2 start-0 end-0 mx-4">
           <div class="container-fluid">
-            <a class="navbar-brand font-weight-bolder ms-lg-0 ms-3 " href="/">
-              Argon Dashboard 2
-            </a>
+
             <button class="navbar-toggler shadow-none ms-2" type="button" data-bs-toggle="collapse" data-bs-target="#navigation" aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon mt-2">
                 <span class="navbar-toggler-bar bar1"></span>
@@ -19,21 +17,19 @@
                 <li class="nav-item">
                   <a class="nav-link me-2" href="{{ url_for('authentication_blueprint.register') }}">
                     <i class="fas fa-user-circle opacity-6 text-dark me-1"></i>
-                    Sign Up
+                    הרשמה
                   </a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link me-2" href="{{ url_for('authentication_blueprint.login') }}">
                     <i class="fas fa-key opacity-6 text-dark me-1"></i>
-                    Sign In
+                    התחברות
                   </a>
                 </li>
               </ul>
               <ul class="navbar-nav d-lg-block d-none">
                 <li class="nav-item">
-                  <a href="https://appseed.us/product/argon-dashboard/flask/" 
-                     target="_blank"
-                     class="btn btn-sm mb-0 me-1 btn-primary">Free Download</a>
+
                 </li>
               </ul>
             </div>
