--- a/apps/templates/events/calendar.html
+++ b/apps/templates/events/calendar.html
@@ -37,12 +37,12 @@
             <div class="container-fluid">
                 <div class="row mb-2">
                     <div class="col-sm-6">
-                        <h1 class="righte">Calendar</h1>
+                        <h1 class="righte">לוח שנה</h1>
                     </div>
 
                     <div>
                         <button type="button" class="btn btn-success float-right" onclick="load_patients(); load_days();"
-                                data-toggle="modal" data-target="#add_new_event_modal">יצירת שיחה חדשה
+                                data-toggle="modal" data-target="#add_new_event_modal">הוספת שיחה חדשה
                         </button>
                     </div>
 
@@ -52,12 +52,7 @@
                         </button>
                     </div>
 
-                    <div class="col-sm-6">
-                        <ol class="breadcrumb float-sm-right">
-                            <li class="breadcrumb-item"><a href="#">Home</a></li>
-                            <li class="breadcrumb-item active">Calendar</li>
-                        </ol>
-                    </div>
+
                 </div>
             </div><!-- /.container-fluid -->
         </section>
@@ -123,13 +118,13 @@
 
 
                         <div class="form-group">
-                            <button class="btn btn-primary" type="submit">הוספת שיחת וידאו חדשה</button>
+                            <button class="btn btn-primary" type="submit">הוספת שיחה חדשה</button>
                         </div>
                     </form>
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">סגירה</button>
                 </div>
             </div>
         </div>
@@ -158,13 +153,13 @@
 
 
                         <div class="form-group">
-                            <button name ='event_for_now' class="btn btn-primary" type="submit">התקשר</button>
+                            <button name ='event_for_now' class="btn btn-primary" type="submit">התקשר עכשיו</button>
                         </div>
                     </form>
                 </div>
 
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">סגירה</button>
                 </div>
             </div>
         </div>
